[project]
name = "qats"
version = "0.0.0"
description = "Library for efficient processing and visualization of time series"
authors = [
    { name = "Per Voie", email = "per.voie@gmail.com" },
    { name = "Erling Lone", email = "erling.lone@gmail.com" },
]
requires-python = ">=3.8.1,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "h5py>=3.5.0 ; python_version < '3.13'",
    "h5py>=3.12.1 ; python_version >= '3.13'",
    "contourpy>=1.0.1 ; python_version < '3.13'",
    "contourpy>=1.3.1 ; python_version >= '3.13'",
    "pymatreader>=0.0.24",
    "matplotlib>=3.3.3 ; python_version < '3.13'",
    "matplotlib>=3.9.1 ; python_version >= '3.13'",
    "nptdms>=1.1.0",
    "numpy>=1.21.6 ; python_version < '3.12'",
    "numpy>=1.26.0 ; python_version >= '3.12' and python_version < '3.13'",
    "numpy>=2.1.0 ; python_version >= '3.13'",
    "openpyxl>=3.0.5",
    "pandas>=1.1.4 ; python_version < '3.12'",
    "pandas>=2.2.0 ; python_version >= '3.12'",
    "qtpy>=1.9.0",
    "scipy>=1.9.0 ; python_version < '3.12'",
    "scipy>=1.11.1 ; python_version >= '3.12' and python_version < '3.13'",
    "scipy>=1.14.1 ; python_version >= '3.13'",
    "pywin32>=306,<307 ; python_version < '3.13' and platform_system == 'Windows'",
    "pywin32>=308,<309 ; python_version >= '3.13' and platform_system == 'Windows'",
    "pyside6>=6.6.0,<=6.8.1 ; python_version < '3.13'",
    "pyside6==6.8.1 ; python_version >= '3.13'",
    "importlib-resources",
]

[project.urls]
Homepage = "https://github.com/dnvgl/qats"
Repository = "https://github.com/dnvgl/qats"
Documentation = "https://qats.readthedocs.io"
Download = "https://pypi.org/project/qats/"
Issues = "https://github.com/dnvgl/qats/issues"
Changelog = "https://github.com/dnvgl/qats/releases"

[project.scripts]
qats = "qats.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8",
    "flake8>=6.1.0,<7",
    "black>=23.11.0,<24",
    "isort>=5.12.0,<6",
]
docs = [
    "sphinx>=7.1.2",
    "furo>=2023.9.10",
    "myst-parser>=2.0.0",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[[tool.uv.index]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE",
    "CHANGELOG.md",
    "*/_version.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "LICENSE",
    "CHANGELOG.md",
    "*/_version.py",
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.files."qats/_version.py"]
persistent-substitution = true
initial-content = """
# file generated by poetry dynamic versioning during poetry build/install
# don't change, don't track in version control
__version__ = "0.0.0"
__version_tuple__ = (0, 0, 0)
"""

[build-system]
# https://pypi.org/project/poetry-dynamic-versioning/
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.1.1,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"  # "poetry.core.masonry.api"
