# pyproject.toml
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# https://github.com/pypa/setuptools_scm#setuptools_scm

[project]
name = "qats"
# version = "0.0.0"
description = "Library for efficient processing and visualization of time series"
authors = [
    { name = "Per Voie", email = "per.voie@gmail.com" },
    { name = "Erling Lone", email = "erling.lone@gmail.com" },
]
requires-python = ">=3.8.1,<3.14"
readme = "README.md"
dynamic = ["version"]
# license = "MIT"
license.file = "LICENSE"
dependencies = [
    "h5py>=3.11.0",
    "importlib-resources>=6.4.5",
    "matplotlib>=3.7.5",
    "nptdms>=1.10.0",
    "numpy>=1.24.4",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pymatreader>=0.0.32",
    "pyside6>=6.6.3.1",
    "pywin32>=308 ; sys_platform == 'win32'",
    "qtpy>=2.4.2",
    "scipy>=1.10.1",
]
# dependencies = [
#     "h5py>=3.5.0 ; python_version < '3.13'",
#     "h5py>=3.12.1 ; python_version >= '3.13'",
#     "pymatreader>=0.0.24",
#     "matplotlib>=3.3.3 ; python_version < '3.13'",
#     "matplotlib>=3.9.1 ; python_version >= '3.13'",
#     "nptdms>=1.1.0",
#     "numpy>=1.21.6 ; python_version < '3.12'",
#     "numpy>=1.26.0 ; python_version >= '3.12' and python_version < '3.13'",
#     "numpy>=2.1.0 ; python_version >= '3.13'",
#     "openpyxl>=3.0.5",
#     "pandas>=1.1.4 ; python_version < '3.12'",
#     "pandas>=2.2.0 ; python_version >= '3.12'",
#     "qtpy>=1.9.0",
#     "scipy>=1.9.0 ; python_version < '3.12'",
#     "scipy>=1.11.1 ; python_version >= '3.12' and python_version < '3.13'",
#     "scipy>=1.14.1 ; python_version >= '3.13'",
#     "pywin32>=306,<307 ; python_version < '3.13' and platform_system == 'Windows'",
#     "pywin32>=308,<309 ; python_version >= '3.13' and platform_system == 'Windows'",
#     "pyside6>=6.6.0,<=6.8.1 ; python_version < '3.13'",
#     "pyside6==6.8.1 ; python_version >= '3.13'",
#     "importlib-resources",
# ]

[project.urls]
Homepage = "https://github.com/dnvgl/qats"
Repository = "https://github.com/dnvgl/qats"
Documentation = "https://qats.readthedocs.io"
Download = "https://pypi.org/project/qats/"
Issues = "https://github.com/dnvgl/qats/issues"
Changelog = "https://github.com/dnvgl/qats/releases"

[project.scripts]
qats = "qats.cli:main"

# [dependency-groups]
# dev = [
#     "pytest>=7.4.3,<8",
#     "flake8>=6.1.0,<7",
#     "black>=23.11.0,<24",
#     "isort>=5.12.0,<6",
# ]
# docs = [
#     "sphinx>=7.1.2",
#     "furo>=2023.9.10",
#     "myst-parser>=2.0.0",
# ]

# [tool.uv]
# default-groups = [
#     "dev",
#     "docs",
# ]

[[tool.uv.index]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE",
    "CHANGELOG.md",
    "*/_version.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "LICENSE",
    "CHANGELOG.md",
    "*/_version.py",
]

[tool.setuptools.packages.find]
# - All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = ["tests*", "data"]  # empty by default
# - additional excludes are included in MANIFEST.in, as a workaround for current limitations in pyproject.toml
#   (ref. e.g. https://github.com/pypa/setuptools/issues/3341)
# namespaces = false  # true by default


[tool.setuptools_scm]
# a version file can be written by setuptools_scm if specified
version_file = "qats/_version.py"

[build-system]
requires = [
  "setuptools>=64", 
  "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pytest>=8.3.4",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.1.2",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]
