# pyproject.toml
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# https://github.com/pypa/setuptools_scm#setuptools_scm

[project]
name = "qats"
description = "Library for efficient processing and visualization of time series"
authors = [
    { name = "Per Voie", email = "per.voie@gmail.com" },
    { name = "Erling Lone", email = "erling.lone@gmail.com" },
]
requires-python = ">=3.8.1,<3.14"
readme = "README.md"
dynamic = ["version"]
license.file = "LICENSE"
dependencies = [
    "h5py>=3.11.0",
    "importlib-resources>=6.4.5",
    "matplotlib>=3.7.5",
    "nptdms>=1.10.0",
    "numpy>=1.24.4",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pymatreader>=0.0.32",
    "pyside6>=6.6.3.1",
    "pywin32>=308 ; sys_platform == 'win32'",
    "qtpy>=2.4.2",
    "scipy>=1.10.1",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pytest>=8.3.4",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.1.2",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[project.urls]
Homepage = "https://github.com/dnvgl/qats"
Repository = "https://github.com/dnvgl/qats"
Documentation = "https://qats.readthedocs.io"
Download = "https://pypi.org/project/qats/"
Issues = "https://github.com/dnvgl/qats/issues"
Changelog = "https://github.com/dnvgl/qats/releases"

[project.scripts]
qats = "qats.cli:main"

[[tool.uv.index]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
# exclude doesn't seem to take effect with `uv build` (or python -m build), and these 
# folders are still included. 
# a manifest file (MANIFEST.in) is therefore used in addition, as a workaround for current limitations in pyproject.toml
#   (ref. e.g. https://github.com/pypa/setuptools/issues/3341)
exclude = [
    "docs*",
    "data*",
    "test*", 
]  # empty by default

[tool.setuptools_scm]
# a version file can be written by setuptools_scm if specified
version_file = "qats/_version.py"

[build-system]
requires = [
  "setuptools>=64", 
  "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

